2020-06-08  Lauro Moura  <lmoura@igalia.com>

        [WebDriver][GTK][WPE] Fix overwritten expectations.

        WPE's set_window_rect/set.py expectations were in a block after the
        existing ones from other ports, overwriting them. This commit now
        merges them to be in a single block.

        Unreviewed test gardening.

        * TestExpectations.json:

2020-06-08  Lauro Moura  <lmoura@igalia.com>

        [WebDriver][GTK] Update test expectations after modifier fix

        Unreviewed test gardening.

        * TestExpectations.json:

2020-05-30  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] WebDriver: stop using GdkEvent API in preparation for GTK4
        https://bugs.webkit.org/show_bug.cgi?id=212465

        Reviewed by Adrian Perez de Castro.

        Remove expectations for tests that are passing now.

        * TestExpectations.json:

2020-05-19  Lauro Moura  <lmoura@igalia.com>

        [WebDriver][WPE] Skip windowing tests.

        These tests are related to window operations not directly supported by
        WPE.

        Unreviewed test gardening.

        * TestExpectations.json:

2020-05-06  Lauro Moura  <lmoura@igalia.com>

        [WebDriver] gardening flaky test.

        Unreviewed test gardening.

        * TestExpectations.json:

2020-05-05  Lauro Moura  <lmoura@igalia.com>

        [WebDriver] Gardening more GTK failures.

        Unreviewed test gardening.

        * TestExpectations.json:

2020-05-01  Lauro Moura  <lmoura@igalia.com>

        [WebDriver] Gardening some failures.

        Unreviewed test gardening.

        * TestExpectations.json:

2020-04-10  Diego Pino Garcia  <dpino@igalia.com>

        [WebDriver] Gardening, remove spurious entry
        https://bugs.webkit.org/show_bug.cgi?id=210333

        Unreviewed gardening.

        All subtests in the test were passing, so the entry can be deleted.

        * TestExpectations.json:

2020-04-09  Diego Pino Garcia  <dpino@igalia.com>
